WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235180
Non-unified build fixes, mid January 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=235180
Summary
Non-unified build fixes, mid January 2022 edition
Adrian Perez
Reported
2022-01-13 05:06:49 PST
🤷♂️️
Attachments
Patch
(3.10 KB, patch)
2022-01-13 05:16 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-01-13 05:16:55 PST
Created
attachment 449050
[details]
Patch
EWS
Comment 2
2022-01-13 15:49:07 PST
Committed
r287998
(
246025@main
): <
https://commits.webkit.org/246025@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449050
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-01-13 15:50:16 PST
<
rdar://problem/87574955
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug