Non-unified build fixes, mid January 2022 edition https://bugs.webkit.org/show_bug.cgi?id=235180

Unreviewed non-unified build fixes.

No new tests needed.


* platform/graphics/filters/SourceAlpha.cpp: Add missing ImageBuffer.h header.
* svg/SVGFEPointLightElement.cpp: Add missing FilterEffectVector.h header.
* svg/SVGFESpotLightElement.cpp: Add missing headers FilterEffectVector.h,
GeometryUtilities.h, and ImageBuffer.h.
* svg/graphics/filters/SVGFilterBuilder.h: Add missing FilterEffectVector.h header.



Canonical link: https://commits.webkit.org/246025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287998 268f45cc-cd09-0410-ab3c-d52691b4dbfc